Prevent White Space
-Added Overflow to Prevent White Space on Mobile

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,9 +8,16 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
   font-size: 1.2rem;
   font-family: "Poppins", sans-serif;
+  height: 100%;
+  overflow: auto;
 }
 
 .main-header {
